--- a/index.html
+++ b/index.html
@@ -48,9 +48,7 @@
     <div class="cnimagenes">
       <img
         src="https://th.bing.com/th/id/R.8ca9c963404b0dea4d5657589dc7dc70?rik=6sihSmOc4zepvQ&riu=http%3a%2f%2fwww.soccerpro.com%2fthecentercircle%2fwp-content%2fuploads%2f2013%2f08%2fchelsea-fc-0v.jpg&ehk=54OsselRu91PjE7anLJEH4YExozSOOdYeBGSLHXiU60%3d&risl=&pid=ImgRaw&r=0"
-        alt="Mi equipo favorito"
-      />
+        alt="Mi equipo favorito"/>
     </div>
-    <p></p>
   </body>
 </html>
