--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <title>Home</title>
     <style type="text/css">
       body {
-        background-image: url("https://wallpaperaccess.com/full/1398669.jpg");
+        background-image: url("https://wallpapercave.com/wp/wp7165732.jpg");
       }
       p {
         font-family: "Comic Sans MS", cursive, sans-serif;
         font-size: 12px;
         letter-spacing: 1px;
         word-spacing: 0px;
-        color: #da1a1a;
+        color: #f9f9f9;
         font-weight: 700;
         text-decoration: none;
         font-style: normal;
@@ -32,23 +32,31 @@
     </style>
   </head>
   <body>
-    <h1>Sobre mí</h1>
+    <h1>Punta Cana</h1>
     <p>
-      Soy Francis Hernandez, vivo en San Martin de Porres
+      Republica Dominicana es un pais al este de centro america. Es una costa
+      del caribe de mar muy claro y celeste claramente puedes ver los caballitos
+      de mar. Aqui te voy a mostrar una imagen de Punta Cana
     </p>
     <div class="cnimagenes">
       <img
-        src="https://th.bing.com/th/id/OIP.O9r5IrYw4iHSp1JEm04QtQAAAA?w=168&h=180&c=7&r=0&o=5&pid=1.7"
-        alt="Yo"
+        src="https://wcm.transat.com/getmedia/adec4533-08af-4a1c-9ac7-041de115fc75/puj-jewel-punta-cana-aerial-01.jpg.aspx?width=2048&height=1536&ext=.jpg"
+        alt="la playa"
       />
     </div>
     <p>
-      Me gusta hacer deporte, en especial el fútbol. Mi equipo favorito es Chelsea FC
+      Punta cana es una economia principalmente que vive del turismo
+      norteamericano y europeo. En la epoca española era un centro de acopio de
+      los bienes que se llevaban de latinoamerica. La arquitectura principal es
+      española de las ciudades y alrededor de ella estan los resort, y te puedes
+      pasear en la playa en el catamaran.
     </p>
     <div class="cnimagenes">
       <img
-        src="https://th.bing.com/th/id/R.8ca9c963404b0dea4d5657589dc7dc70?rik=6sihSmOc4zepvQ&riu=http%3a%2f%2fwww.soccerpro.com%2fthecentercircle%2fwp-content%2fuploads%2f2013%2f08%2fchelsea-fc-0v.jpg&ehk=54OsselRu91PjE7anLJEH4YExozSOOdYeBGSLHXiU60%3d&risl=&pid=ImgRaw&r=0"
-        alt="Mi equipo favorito"/>
+        src="https://www.iwaysys.com/images/escaparate/594bd39143e40-45.jpg"
+        alt="el catamaran"
+      />
     </div>
+    <p>Derechos reservados a @fundamento web</p>
   </body>
 </html>
