--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Home</title>
     <style type="text/css">
       body {
-        background-image: url("https://wallpapercave.com/wp/wp7165732.jpg");
+        background-image: url("https://wallpaperaccess.com/full/1398669.jpg");
       }
       p {
         font-family: "Comic Sans MS", cursive, sans-serif;
@@ -34,26 +34,20 @@
   <body>
     <h1>Punta Cana</h1>
     <p>
-      Republica Dominicana es un pais al este de centro america. Es una costa
-      del caribe de mar muy claro y celeste claramente puedes ver los caballitos
-      de mar. Aqui te voy a mostrar una imagen de Punta Cana
+      Hola me llamo Francis Enrique Hernandez Mendoza, Vivo en San Martin de porres
     </p>
     <div class="cnimagenes">
       <img
-        src="https://wcm.transat.com/getmedia/adec4533-08af-4a1c-9ac7-041de115fc75/puj-jewel-punta-cana-aerial-01.jpg.aspx?width=2048&height=1536&ext=.jpg"
+        src="https://th.bing.com/th/id/OIP.O9r5IrYw4iHSp1JEm04QtQAAAA?w=176&h=180&c=7&r=0&o=5&pid=1.7"
         alt="la playa"
       />
     </div>
     <p>
-      Punta cana es una economia principalmente que vive del turismo
-      norteamericano y europeo. En la epoca española era un centro de acopio de
-      los bienes que se llevaban de latinoamerica. La arquitectura principal es
-      española de las ciudades y alrededor de ella estan los resort, y te puedes
-      pasear en la playa en el catamaran.
+      Me gusta el futbol y mi equipo favorito es Chelsea FC
     </p>
     <div class="cnimagenes">
       <img
-        src="https://www.iwaysys.com/images/escaparate/594bd39143e40-45.jpg"
+        src="https://wallpapers.com/images/hd/silky-chelsea-fc-logo-esvpoici90jl4fpx.jpg"
         alt="el catamaran"
       />
     </div>
