--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         font-size: 12px;
         letter-spacing: 1px;
         word-spacing: 0px;
-        color: #f9f9f9;
+        color: #e62727;
         font-weight: 700;
         text-decoration: none;
         font-style: normal;
