--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       }
       h1 {
         text-align: center;
-        color: #f9f9f9;
+        color: #e62727;
       }
       .cnimagenes {
         text-align: center;
